--- a/vk/vk_public_constants.ini
+++ b/vk/vk_public_constants.ini
@@ -5,3 +5,5 @@ group_id = 199948263
 tag = empty32
 
 symbols_limit = 4096
+
+chat_error_message = При обработке команды "{command}" произошла ошибка! Какая нахер ошибка, я же человек...
